--- a/MVC/CIPlatform/CIPlatform/CIPlatform.csproj
+++ b/MVC/CIPlatform/CIPlatform/CIPlatform.csproj
@@ -26,6 +26,11 @@
     <ProjectReference Include="..\CIPlatform.Entities\CIPlatform.Entities.csproj" />
     <ProjectReference Include="..\CIPlatform.Repositories\CIPlatform.Repository.csproj" />
   </ItemGroup>
+
+	
+  <ItemGroup>
+    <Folder Include="wwwroot\NewFolder1\" />
+  </ItemGroup>
 	
 	
 
