--- a/MVC/CIPlatform/CIPlatform.Entities/CIPlatform.Entities.csproj
+++ b/MVC/CIPlatform/CIPlatform.Entities/CIPlatform.Entities.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="datatables.net" Version="1.13.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.2.23128.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
       <PrivateAssets>all</PrivateAssets>
