Completed CRUD operations for CMS Page and Mission Theme

--- a/MVC/CIPlatform/CIPlatform/CIPlatform.csproj
+++ b/MVC/CIPlatform/CIPlatform/CIPlatform.csproj
@@ -9,7 +9,11 @@
 	
   <ItemGroup>
 	  
-    <PackageReference Include="datatables.net" Version="1.13.4" />
+    <PackageReference Include="cloudscribe.Web.Pagination" Version="6.0.0" />
+	  
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
+	  
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
 	  
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.2.23128.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-preview.1.23111.4">
@@ -21,6 +25,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Contracts" Version="6.0.0-preview.6.21362.1" />
+    <PackageReference Include="Mvc.JQuery.Datatables" Version="1.5.56" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.6.0-preview3.19128.7" />
   </ItemGroup>
 
 	
