--- a/MVC/CIPlatform/CIPlatform.Repositories/CIPlatform.Repository.csproj
+++ b/MVC/CIPlatform/CIPlatform.Repositories/CIPlatform.Repository.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="datatables.net" Version="1.13.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
+    <PackageReference Include="Mvc.JQuery.Datatables" Version="1.5.56" />
   </ItemGroup>
 
   <ItemGroup>
