--- a/MVC/CIPlatform/CIPlatform/CIPlatform.csproj
+++ b/MVC/CIPlatform/CIPlatform/CIPlatform.csproj
@@ -11,6 +11,8 @@
 	  
     <PackageReference Include="cloudscribe.Web.Pagination" Version="6.0.0" />
 	  
+    <PackageReference Include="FoolproofValidation" Version="0.9.4518" />
+	  
     <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
 	  
     <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
